--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry kind="lib" path="libs/mta-sdk-1.7.2.jar"/>
+	<classpathentry kind="lib" path="libs/gdt_mob_release_v4.2.432.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
