--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,16 +4,25 @@
     android:versionCode="2"
     android:versionName="2.0" >
 
-    <uses-sdk
-        android:minSdkVersion="14"
-        android:targetSdkVersion="19" />
-
-	<!-- mta系统的权限< -->
+	<!-- mta系统的权限 -->
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 	<uses-permission android:name="android.permission.READ_PHONE_STATE" />
+
+	<!-- gdt系统的权限 -->
+	<!-- <uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+	<uses-permission android:name="android.permission.READ_PHONE_STATE"/> -->
+	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />  
+	<uses-permission android:name="android.permission.ACCESS_COARSE_UPDATES"/>
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     
+    <uses-sdk
+        android:minSdkVersion="14"
+        android:targetSdkVersion="19" />
+	
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -40,7 +49,13 @@
 		<meta-data android:name="TA_APPKEY" android:value="A6LA8E8MC1LR" />
 		<!-- 请将CHANNAL改为app的发布渠道 < -->
 		<meta-data  android:name="InstallChannel" android:value="CHANNAL" />
-        
+    
+		<service  android:name="com.qq.e.comm.DownloadService" android:exported="false"></service>
+		<activity android:name="com.qq.e.ads.AdActivity"></activity>
+		<activity android:name="com.qq.e.ads.GdtBrowserActivity"></activity>
+		<activity android:name="com.qq.e.appwall.AppwallActivity" android:configChanges="keyboard|keyboardHidden|orientation" />
+		<service android:name="com.qq.e.comm.DownloadService" android:exported="false"></service>
+		
 	</application>
     
 </manifest>
