--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.vwarship.theartofkissing"
+    package="com.zaoqibu.theartofkissing"
     android:versionCode="2"
     android:versionName="2.0" >
 
@@ -8,13 +8,26 @@
         android:minSdkVersion="14"
         android:targetSdkVersion="19" />
 	
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_LOGS" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+    
+    <!-- GDT -->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_UPDATES"/>
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.vwarship.theartofkissing.MainActivity"
+            android:name="com.zaoqibu.theartofkissing.MainActivity"
             android:label="@string/app_name" 
             android:screenOrientation="portrait">
             <intent-filter>
@@ -24,11 +37,29 @@
             </intent-filter>
         </activity>
         
-        <activity android:name="com.vwarship.theartofkissing.ArticleActivity">
+        <activity android:name="com.zaoqibu.theartofkissing.ArticleActivity">
         </activity>
         
-        <activity android:name="com.vwarship.theartofkissing.AboutActivity">
+        <activity android:name="com.zaoqibu.theartofkissing.AboutActivity">
         </activity>
+        
+        <meta-data android:value="53737c2556240b1cc503b1cf" android:name="UMENG_APPKEY"></meta-data>
+		<meta-data android:value="Channel ID" android:name="UMENG_CHANNEL"/>
+        <service
+            android:name="com.umeng.common.net.DownloadingService"
+            android:process=":DownloadingService" >
+        </service>
+        <activity 
+		    android:name="com.umeng.update.UpdateDialogActivity"
+		    android:theme="@android:style/Theme.Translucent.NoTitleBar" >
+		</activity>
+		
+        <!-- GDT -->
+		<service  android:name="com.qq.e.comm.DownloadService" android:exported="false"></service>
+		<activity android:name="com.qq.e.ads.AdActivity"></activity>
+		<activity android:name="com.qq.e.ads.GdtBrowserActivity"></activity>
+		<activity android:name="com.qq.e.appwall.AppwallActivity" android:configChanges="keyboard|keyboardHidden|orientation" />
+		<service android:name="com.qq.e.comm.DownloadService" android:exported="false"></service>        
 	</application>
     
 </manifest>
