--- a/proguard.cfg
+++ b/proguard.cfg
@@ -53,3 +53,10 @@
 
 -keep public class com.umeng.fb.ui.ThreadView {
 }
+
+-keep class com.qq.e.** {
+   public protected *; 
+} 
+-keep class com.tencent.gdt.**{ 
+   public protected *; 
+}
