更改为腾讯的分析

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,26 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.zaoqibu.theartofkissing"
-    android:versionCode="2"
-    android:versionName="2.0" >
+    android:versionCode="3"
+    android:versionName="2.1" >
 
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="19" />
-	
+
+    <!-- MTA -->
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.READ_LOGS" />
-    <uses-permission android:name="android.permission.CALL_PHONE" />
     
     <!-- GDT -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_UPDATES"/>
-
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.WRITE_SETTINGS"/>
+    
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -32,7 +31,6 @@
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -45,18 +43,11 @@
         
         <activity android:name="com.zaoqibu.theartofkissing.activity.AboutActivity">
         </activity>
-        
-        <meta-data android:value="53737c2556240b1cc503b1cf" android:name="UMENG_APPKEY"></meta-data>
-		<meta-data android:value="Channel ID" android:name="UMENG_CHANNEL"/>
-        <service
-            android:name="com.umeng.common.net.DownloadingService"
-            android:process=":DownloadingService" >
-        </service>
-        <activity 
-		    android:name="com.umeng.update.UpdateDialogActivity"
-		    android:theme="@android:style/Theme.Translucent.NoTitleBar" >
-		</activity>
 		
+		<!-- MTA -->
+		<meta-data android:name="TA_APPKEY" android:value="A6LA8E8MC1LR" />
+		<meta-data android:name="InstallChannel" android:value="YOUR_CHANNEL" />
+        
         <!-- GDT -->
 		<service android:name="com.qq.e.comm.DownloadService" android:exported="false"></service>
 		<activity android:name="com.qq.e.ads.AdActivity" android:theme="@android:style/Theme.Translucent"></activity>
